--- a/tp1.ipynb
+++ b/tp1.ipynb
@@ -367,13 +367,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4dd5a40ade5f4286b47d98ea9052cbdc",
+       "model_id": "2ec9ea2693ba4235a99730798064ec25",
        "version_major": 2,
        "version_minor": 0
       },
@@ -387,7 +387,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1f705fcc65ee443d8278150854fe1ffb",
+       "model_id": "23c947f4abf1467a84f21ec60bf4e6d6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -401,7 +401,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b7df03cc4ab742b79977a2ea4afdf690",
+       "model_id": "ff0362e2c18043a08b6ab62d5c79bb15",
        "version_major": 2,
        "version_minor": 0
       },
@@ -411,13 +411,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "La simulación de Preferential Attachment es más afín a la red original.\n"
-     ]
     }
    ],
    "source": [
@@ -439,9 +432,23 @@
     "# Obtener representaciones de nodos\n",
     "embeddings_original = model_original.wv\n",
     "embeddings_er = model_er.wv\n",
-    "embeddings_pa = model_pa.wv\n",
-    "\n",
-    "\n",
+    "embeddings_pa = model_pa.wv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La simulación de Preferential Attachment es más afín a la red original.\n"
+     ]
+    }
+   ],
+   "source": [
     "# Función para calcular la distancia coseno promedio entre dos conjuntos de representaciones\n",
     "def average_coseno_distance(embeddings1, embeddings2):\n",
     "    coseno_distances = cosine_distances(embeddings1, embeddings2)\n",
